fix network footer 5px overlap on right; groupName in selection

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -222,7 +222,6 @@ div.field.has-addons.add-remove-toggle {
 }
 
 .toolbar {
-  padding: 5px;
   border-top: 2px solid #d0d0d0;
 
   .field {
